Change userId to int
